# ophelib

./: .ackrc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  API.md  BUILD.md  CHANGELOG  CMakeLists.txt  DEMO.md  DEVELOPMENT.md  Dockerfile  Doxyfile  LICENSE  QUICKSTART.md  README.md  clean.sh  profile.sh  release-docker.sh  release.sh  test.sh
cmake/: FindGMP.cmake  FindGMPXX.cmake  FindNTL.cmake  GetVersion.cmake  OPHELibConfig.cmake.in  UpdateSubmodules.cmake
demo/src/: hello_world.cpp
include/OPHELib/: error.h  fast_mod.h  integer.h  ml.h  omp_wrap.h  paillier_base.h  util.h
include/OPHELib/wire/: key_pair.fbs  mat_float.fbs  public_key.fbs  vec_float.fbs  vec_integer.fbs  vec_packed_ciphertext.fbs
include/ophelib/: backtrace.h  disable_exception_tests.h  error.h  fast_mod.h  integer.h  ml.h  ntl_conv.h  packing.h  paillier.h  paillier_base.h  paillier_fast.h  random.h  util.h  vector.h  wire.h
include/ophelib/wire/: ciphertext.fbs  integer.fbs  key_pair.fbs  mat_ciphertext.fbs  mat_integer.fbs  packed_ciphertext.fbs  private_key.fbs  vec_ciphertext.fbs  vec_float.fbs
sample/: CMakeLists.txt  hello_world.cpp
schemas/: ciphertext.fbs  integer.fbs  mat_ciphertext.fbs  mat_float.fbs  mat_integer.fbs  packed_ciphertext.fbs  private_key.fbs  public_key.fbs  vec_integer.fbs  vec_packed_ciphertext.fbs
src/: backtrace.cpp  compute_randomizer_params.cpp  error.cpp  fast_mod.cpp  integer.cpp  integer_ops.cpp  ml.cpp  ntl_conv.cpp  packing.cpp  paillier.cpp  paillier_base.cpp  paillier_fast.cpp  random.cpp  util.cpp  vector.cpp  wire.cpp
test/: Makefile  hello_world.cpp  ophelib_dump.cpp  perf_base_ops.cpp  perf_packing.cpp  perf_vector_parallel.cpp  test_fastmod.cpp  test_integer.cpp  test_ml.cpp  test_ntl_conv.cpp  test_packing.cpp  test_paillier.cpp  test_paillier_fast.cpp  test_random.cpp  test_util.cpp  test_vector.cpp  test_wire.cpp
test/fixtures/: rand.txt  rand_big.txt  random_data.py  x10.txt  x17.txt
